frontendofnodeapp.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: home-deployment
  labels:
    app: home
spec:
  template:
    metadata:
      labels:
        app: home
    spec:
      containers:
        - name: home-c
          image: tejaspatil19/home:latest
          ports:
            - containerPort: 80
          resources:
            requests:
              cpu: 200m
              memory: 100Mi
            limits:
              cpu: 400m
              memory: 200Mi
  replicas: 3
  selector:
    matchLabels:
      app: home
  strategy:
    type: RollingUpdate
...
---
apiVersion: v1
kind: Service
metadata:
  name: home-svc
spec:
  ports:
    - port: 80
      targetPort: 80
      protocol: TCP
  selector:
    app: home
...
