homeapp.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: home-deployment
  labels:
    app: home
spec:
  template:
    metadata:
      labels:
        app: home
    spec:
      containers:
        - name: home-c
          image: tejaspatil19/mobile:latest
          ports:
            - containerPort: 80
  replicas: 2
  selector:
    matchLabels:
      app: home
  strategy:
    type: RollingUpdate
...
---
apiVersion: v1
kind: Service
metadata:
  name: home-svc
spec:
  ports:
    - port: 80
      targetPort: 80
      protocol: TCP
  selector:
    app: home
...
