nodeapp.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nodeapp-backend
  labels:
    app: my-app
spec:
  template:
    metadata:
      labels:
        app: my-app
    spec:
      containers:
        - name: app-container
          image:  tejaspatil19/chatapp-updated:latest
          ports:
            - containerPort: 3000
          resources:
            requests:
              cpu: 200m
              memory: 100Mi
            limits:
              cpu: 400m
              memory: 200Mi
  replicas: 3
  selector:
    matchLabels:
      app: my-app
  strategy:
    type: RollingUpdate
...
---
apiVersion: v1
kind: Service
metadata:
  name: backend-svc
spec:
  ports:
    - port: 80
      targetPort: 8080
      protocol: TCP
  type: NodePort
  selector:
    app: my-app
...
