ingressforapp.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata: 
  name: my-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  defaultBackend:
    service:
      name: home-svc
      port:
        number: 80
  rules:
    - host: " abe8125bcb9784043b7dbbfc342304ba-429cc4ba30431574.elb.eu-central-1.amazonaws.com"
      http:
        paths:
        - path: /home
          pathType: Prefix
          backend:
            service:
              name: home-svc
              port:
                number: 80
